Grace/tests/gibbs/errors/t140.grace
// ERROR = P1031
method a(b,*) {}
